[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlayerStatusUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.792157, 0.694118, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.411765, 0.415686, 0.360784, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.27451, 0.647059, 0.529412, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.494118, 0.239216, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.184314, 0.403922, 0.745098, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.309804, 0.270588, 0.32549, 1 )

[node name="PlayerStatusUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
rect_scale = Vector2( 1.35028, 1.40909 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 1.86174, 1.03767 )
color = Color( 0.227451, 0.243137, 0.286275, 0.392157 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ExpBar" type="ProgressBar" parent="."]
margin_left = 28.1424
margin_top = 34.0645
margin_right = 68.1424
margin_bottom = 35.0645
rect_scale = Vector2( 1.05925, 1 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
step = 1.0
value = 66.0
percent_visible = false

[node name="ExpLabel" type="Label" parent="ExpBar"]
margin_left = -24.4395
margin_top = -4.96776
margin_right = 15.5605
margin_bottom = 9.03224
text = "EXP"

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = 24.4395
margin_top = 7.09678
margin_right = 64.4395
margin_bottom = 8.09678
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
step = 1.0
value = 80.0
percent_visible = false

[node name="HPLabel" type="Label" parent="HealthBar"]
margin_left = -21.4771
margin_top = -5.67742
margin_right = 18.5229
margin_bottom = 8.32258
text = "HP"

[node name="ManaBar" type="ProgressBar" parent="."]
margin_left = 25.18
margin_top = 16.3226
margin_right = 65.18
margin_bottom = 17.3226
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 13 )
step = 1.0
value = 66.0
percent_visible = false

[node name="ManaLabel" type="Label" parent="ManaBar"]
margin_left = -22.2177
margin_top = -1.41936
margin_right = 17.7823
margin_bottom = 12.5806
text = "MP"
